--- a/currencyConverter.html
+++ b/currencyConverter.html
@@ -121,7 +121,7 @@
                   
         <button id="exchange">
           <i class="fas fa-exchange-alt"></i>
-          <img src="images/" alt="" style="position: relative; height: 25px; width: 30px;">
+          <img src="images/exchange.png" alt="" style="position: relative; height: 25px; width: 30px;">
         </button>
 
         <select id="desiredCurrency" class="mySelector" placeholder="Please Select your Desired Currency">
