--- a/currencyConverter.html
+++ b/currencyConverter.html
@@ -119,7 +119,7 @@
             <option value="NGN"> NGN - Nigerian Naira </option>
           </select>
                   
-          <button id="exchange">
+          <button id="exchange" class="mx-auto">
             <i class="fas fa-exchange-alt"></i>
             <img src="images/exchange.png" alt="" style="position: relative; height: 25px; width: 30px;">
           </button>
