--- a/index.html
+++ b/index.html
@@ -49,6 +49,15 @@
     }
   </style>
 
+  <!-- Latest compiled and minified CSS -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
+<!-- Latest compiled JavaScript -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
+<!-- for responsiveness to mobile devices -->
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 </head>
 
 <body style="font-family: sans-serif, Segoe UI, Tahoma, Geneva, Verdana;">
@@ -127,7 +136,7 @@
           </div>
           <div class="col-md-6">
             <div class="img-box">
-              <img src="images/slider-img.png" alt="">
+              <img src="images/slider-img.png" alt="" class="rounded">
             </div>
           </div>
         </div>
