updated the timeNotesCARD image

--- a/index.html
+++ b/index.html
@@ -399,11 +399,11 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
-              <a href="comingSoon.html"><img src="assets/img/masonry-portfolio/timeNotesCARD.jpg" class="img-fluid" alt=""></a>
+              <a href="comingSoon.html"><img src="assets/img/masonry-portfolio/timeNotesCARD.webp" class="img-fluid" alt=""></a>
               <div class="portfolio-info">
                 <h4>Article: Time Notes</h4>
                 <p>What is time? Here's what I think..</p>
-                <a href="assets/img/masonry-portfolio/timeNotesCARD.jpg" title="Time Notes" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="assets/img/masonry-portfolio/timeNotesCARD.webp" title="Time Notes" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="comingSoon.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
