updated the link to thevace717

--- a/index.html
+++ b/index.html
@@ -350,12 +350,12 @@
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <a href="thevace717.com"><img src="assets/img/masonry-portfolio/theVace717.JPG" class="img-fluid" alt=""></a>
+              <a href="https://thevace717.com"><img src="assets/img/masonry-portfolio/theVace717.JPG" class="img-fluid" alt=""></a>
               <div class="portfolio-info">
                 <h4>The Vace717</h4>
                 <p>Web Application for The Vace717, a global fashion brand based in the UK. </p>
                 <a href="assets/img/masonry-portfolio/theVace717.JPG" title="The Vace717" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="thevace717.com" title="Visit Website" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="https://thevace717.com" title="Visit Website" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
